apps/goatlint/src/snapshots/_fixtures__cli__linter__debugger.js fixtures__cli__linter__nan.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: fixtures/cli/linter/debugger.js fixtures/cli/linter/nan.js
working directory: 
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/linter/debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

  ! eslint(no-unused-expressions): Expected expression to be used
   ,-[fixtures/cli/linter/nan.js:1:1]
 1 | 123 == NaN;
   : ^^^^^^^^^^^
   `----
  help: Consider using this expression or removing it

  ! eslint(use-isnan): Checking equality with NaN will always return false
   ,-[fixtures/cli/linter/nan.js:1:8]
 1 | 123 == NaN;
   :        ^^^
   `----
  help: Use the `isNaN` function to compare with NaN.

Found 3 warnings and 0 errors.
Finished in <variable>ms on 2 files with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
